--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,16 @@
   padding: 2rem;
   text-align: center;
 }
+
+input[type="range"]::-moz-range-progress {
+  background-color: #e63d76;
+}
+
+input[type="range"]::-moz-range-track {
+  background-color: grey;
+}
+
+input {
+  position: relative !important;
+  top: 2px !important;
+}
