--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,12 @@ button:hover {
   border-color: #646cff;
 }
 
+.hidden-square {
+  transition: .3s;
+}
+
 .hidden-square:after {
+  transition: .3s;
   width: 100%;
   height: 100%;
   background-color: #1a1a1a;
@@ -60,6 +65,11 @@ button:hover {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.hidden-square:hover:after {
+  opacity: 0;
+  transition: .3s;
 }
 
 
