--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,14 @@ input {
   position: relative !important;
   top: 2px !important;
 }
+
+.square {
+  transition: .075s;
+  font-size: 1.5em;
+  font-weight: 600;
+  background-color: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
